Sapling Pot
Thirst compat
small Durian

1.0.6 / 0.5.6
- Use double block for lemon
- Add Durian

1.0.5 / 0.5.5
- Make jam jars placeable
- Tweak tree spawn rate to fit their biomes
- Double berry and lemon spawn rate
- Fix lemon rendering having black faces when next to a block
- Fix apple jam block recipe

1.0.4 / 0.5.4
- Add figs, kiwi, and bayberry, and respective effects and products
- Add more tree shapes
- Add Berry tags
- use own model for jello block, fix conflict with leaves resource packs
- add juice to create
- Fix Jam block particles
- Juices can always drink

1.0.3 / 0.5.3
- Create compat for jam and jello
- Use tags for wheat dough recipe
- Permanent leaves won't change state
- Diet compat
- Cuisine Delight Compat
- Add apple crate
- Add Mangosteen Cake Block
- Add BoP and Terralith compat

1.0.2 / 0.5.2
- Double Pineapple spawn rate
- (1.19.2 only) Fix pineapple spawning in water
- rename jelly to jam
- Add jello
- Add chorus jam/jello
- Add cauldron jam and jello recipe
- Add jello block and jam block

1.0.1 / 0.5.1
- Add mangosteen and cranberry, and respective effects and products.
- Add fruit crates
- Add Recipe compat with Botany pots and Botany trees
- Add tag compat with Fruit Trees