@@ -6,7 +6,7 @@ org.gradle.daemon=false
 
 # mod version info
 modid = fruitsdelight
-ll_version = 1.0.6-pre4
+ll_version = 1.0.6-pre5
 minecraft_version = 1.20.1
 forge_version = 47.1.3
 
