@@ -37,7 +37,7 @@ public enum FDJuice implements IFDFood {
 	MANGOSTEEN_TEA(FruitType.MANGOSTEEN, Type.TEA),
 	BAYBERRY_SOUP(FruitType.BAYBERRY, Type.SOUP),
 	KIWI_JUICE(FruitType.KIWI, Type.JUICE),
-	BELLINI_COCKTAIL(FruitType.empty(), Type.ICED,
+	BELLINI_COCKTAIL(FruitType.PEACH, Type.ICED,
 			new EffectEntry(FDEffects.HEAL_AURA::get, 200),
 			new EffectEntry(() -> MobEffects.CONFUSION, 100)),
 
