@@ -1,10 +1,13 @@
 Sapling Pot
-Thirst compat
+
 small Durian
 
 1.0.6 / 0.5.6
 - Use double block for lemon
 - Add Durian
+- Fix fig pudding placement orientation
+- Fix bellini cocktail recipe
+- Thirst compat
 
 1.0.5 / 0.5.5
 - Make jam jars placeable
